# IdiomsAndPatterns

./: README.md
ConsoleApps/archive/cpp - test_alternatives/src/: test1.cpp
ConsoleApps/csharp/ConsoleApp/: Test.cs
CreateObject/CSharpObject/: NULL  Program.cs  Program1.cs.html
CreateObject/CppObject/: CMakeLists.txt  CreateObj.cpp  CreateObj1.cpp.html
CreateObject/RustObject/: Cargo.toml
CreateObject/RustObject/src/: main.rs  main1.rs.html
DataOperations/CSharpData/: Program1.cs.html
DataOperations/CppData/: DataOps.cpp
DataOperations/DataOps/src/: main.rs
DataOperations/RustData/: Cargo.toml
DataOperations/RustData/src/: main.rs  main1.rs.html
DepInvPrinciple/BasicDip-C#/: BasicDip-C#.csproj  Program.cs  Program1.cs.html
DepInvPrinciple/BasicDip-Cpp/: BasicDIP.cpp  BasicDIP1.cpp.html  CMakeLists.txt
DepInvPrinciple/CalcDemo-C#/: CalcDemo-C#.csproj  Program.cs
DepInvPrinciple/CalcDemo-Cpp/: GenericDIP.cpp  GenericDIP1.cpp.html
DepInvPrinciple/arch/CalcDemo-Cpp - Copy/: CMakeLists.txt  GenericDIP.cpp
HelloWorld/CSharp/: HelloWorld1.csproj.html
HelloWorld/Cpp/: CMakeLists.txt  Hello.cpp
HelloWorld/Rust/: Cargo.toml
HelloWorld/Rust/src/: main.rs
archive/setup/cpp/src/: test1.cpp
archive/setup/csharp/test1/: Test1.cs
iteration/basic_iteration_cpp/: BasicIter.cpp  CMakeLists.txt
iteration/basic_iteration_rust/: Cargo.toml
iteration/basic_iteration_rust/src/: main.rs
iteration/iteration_Cpp/: CMakeLists.txt  Iteration.cpp  Iteration1.cpp.html
iteration/iteration_Rust/src/: main1.rs.html
iteration/src/: main.rs
iteration/string_iteration_cpp/: CMakeLists.txt  StrIter.cpp
iteration/string_iteration_rust/src/: main.rs
new_archive/ConsoleApps/archive/cpp - test_alternatives/: CMakeLists.txt
new_archive/ConsoleApps/rust/ConsoleApp/: Cargo.toml
new_archive/ConsoleApps/rust/ConsoleApp/src/: main.rs
new_archive/DataOperations/CSharpData/: Program.cs
new_archive/DataOperations/CppData/: CMakeLists.txt  DataOps1.cpp.html
new_archive/DataOperations/DataOps/src/: main.rs
new_archive/idioms/iteration/: Cargo.toml
new_archive/idioms/iteration/src/: main.rs
new_archive/setup/csharp/test1/: Program.cs
setup/cpp - test_alternatives/src/: test1.cpp
setup/cpp/src/: test1.cpp
setup/csharp/test1/: Test1.cs
setup/rust/test1/src/: main.rs
timers/CSharp/: Timer.cs
timers/CSharp/timer/: Program.cs  Timer.cs
timers/Cpp/: CMakeLists.txt
timers/Cpp/src/: DateTime.cpp  DemoDateTime.cpp  StringUtilities.h
timers/Rust/examples/: test1.rs
timers/Rust/src/: lib.rs
